_infra/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeplay-ingress
  annotations:
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - justscrolls.com
        - www.justscrolls.com
      secretName: entwicklerkunst-tls
  rules:
    - host: justscrolls.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: video-service
                port:
                  number: 80
          - path: /news-api
            pathType: Prefix
            backend:
              service:
                name: news-service
                port:
                  number: 80
          - path: /articles-api
            pathType: Prefix
            backend:
              service:
                name: articles-service
                port:
                  number: 80
          - path: /jokes-api
            pathType: Prefix
            backend:
              service:
                name: jokes-service
                port:
                  number: 8080
          - path: /analytics-api
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 8080
          - path: /memes-api
            pathType: Prefix
            backend:
              service:
                name: memes-service
                port:
                  number: 80
          - path: /videos
            pathType: Prefix
            backend:
              service:
                name: scrollfeed-ui
                port:
                  number: 80
          - path: /newsarticles
            pathType: Prefix
            backend:
              service:
                name: scrollfeed-ui
                port:
                  number: 80
          - path: /jokes
            pathType: Prefix
            backend:
              service:
                name: scrollfeed-ui
                port:
                  number: 80
          - path: /memes
            pathType: Prefix
            backend:
              service:
                name: scrollfeed-ui
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scrollfeed-ui
                port:
                  number: 80
    - host: www.justscrolls.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: video-service
                port:
                  number: 80
          - path: /news-api
            pathType: Prefix
            backend:
              service:
                name: news-service
                port:
                  number: 80
          - path: /articles-api
            pathType: Prefix
            backend:
              service:
                name: articles-service
                port:
                  number: 80
          - path: /jokes-api
            pathType: Prefix
            backend:
              service:
                name: jokes-service
                port:
                  number: 8080
          - path: /analytics-api
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 8080
          - path: /memes-api
            pathType: Prefix
            backend:
              service:
                name: memes-service
                port:
                  number: 80
          - path: /videos
            pathType: Prefix
            backend:
              service:
                name: scrollfeed-ui
                port:
                  number: 80
          - path: /newsarticles
            pathType: Prefix
            backend:
              service:
                name: scrollfeed-ui
                port:
                  number: 80
          - path: /jokes
            pathType: Prefix
            backend:
              service:
                name: scrollfeed-ui
                port:
                  number: 80
          - path: /memes
            pathType: Prefix
            backend:
              service:
                name: scrollfeed-ui
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scrollfeed-ui
                port:
                  number: 80
